# VCNC-tmp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: bitmixer.h  bitnames.h  callback.h  interpolator.h  move_block.h  movingaverage.h  parameters.h  ringbuffer.h  short_vector.h  step_buffer.h  step_machine.h  vcnc_types.h  vec.h
